# curve-evolution

./: CMakeLists.txt  README.md
include/: AreaPreserving.h  CurveFlow.h  CurveFlowForce.h  DeTurck.h  DeTurckForce.h  Euler.h  LengthPreserving.h  Merson.h  ODEProblem.h  ODESolver.h  RedisForce.h  RedistributionInSpace.h  curve-solve.h  dragonfly.h  functions.h
src/: AreaPreserving.cpp  CurveFlow.cpp  CurveFlowForce.cpp  DeTurck.cpp  DeTurckForce.cpp  Euler.cpp  LengthPreserving.cpp  Merson.cpp  RedisForce.cpp  RedistributionInSpace.cpp  curve.cpp  functions.cpp
